# wasm-mod-experiments

./: .gitignore  README.md  docs.md  functions.md
bindgen/: bindings.rs  guest_export.wit  guest_import.wit
mods/as_mod/: README.md  asconfig.json  package-lock.json  package.json
mods/as_mod/assembly/: index.ts
mods/as_mod/bindings/: bind.ts  demo.ts  env.ts  game.ts
mods/cpp_mod/: CMakeLists.txt  Commands.txt  Readme.md  cpp-mod.wasm  main.cpp
mods/cpp_mod/binding/: binding.c  binding.h
mods/cpp_mod/bindings/: demo.h  util.h
mods/cpp_mod/etc/: CMakeLists.txt  Commands.txt
mods/cpp_mod/include/: bindings.hpp  global.hpp  malloc.hpp
mods/cpp_mod/include/bindings/: demo.h
mods/cpp_mod/util/util/: int.h
mods/go_mod/: Readme.md  binding.go  go.mod  main.go
mods/rust_mod/: Cargo.toml
mods/rust_mod/.cargo/: config.toml
mods/rust_mod/src/: bindings.rs  bindings_demo.rs  lib.rs
mods/rust_mod/src/bindings/: demo.rs  game.rs  mod.rs
mods/rust_mod/wasminterface/: Cargo.toml  Readme.md
mods/rust_mod/wasminterface/src/: lib.rs
runtime/: Cargo.toml
runtime/src/: main.rs  modapi.rs  modhandlers.rs
