[package]
name = "wasm-mod-runtime"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.26"
rand = "0.8.5"
# This example will not use WASI - too much freedom for my tastes. Poses potential security holes and massively bulks the code
wasmer = "3.1.1"
wasmer-compiler-singlepass = "3.1.1" # consider using LLVM for release

[profile.dev.package."*"]
opt-level = 3
[profile.dev.package.wasmer]
opt-level = 0