# NOTE: For wasm32 freestanding target (see .cargo)
[package]
name = "wasm_mod_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = { version = "0.8.5", default-features = false, features = ["small_rng"] }
wasminterface = { path = "wasminterface" }

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true          # Enable Link Time Optimization. This is a big deal, as it eliminates dead code!
strip = true        # Strip symbols from binary*. This is a major saving!
codegen-units = 1   # Reduce number of codegen units to increase optimizations. Improvements are tiny depending on number of files.
panic = 'abort'     # Abort on panic.
# opt-level = 'z'     # (0123z) Use this if size matters more than speed. Savings should be minor.
